<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="seebee.geebeeview.layout.PatientListActivity">

    <TextView
        android:id="@+id/tv_school_name"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <TextView
            android:id="@+id/tv_pl_name"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_pl_gender"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/tv_pl_age"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_patient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
