<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="seebee.geebeeview.layout.DataVisualizationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_data_visualization_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_visualization" />
        <TextView
            android:id="@+id/tv_dv_right_chart"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/sp_right_chart_content"
            android:text="@string/right_chart_content"/>
        <Spinner
            android:id="@id/sp_right_chart_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:entries="@array/right_chart_content_array">
        </Spinner>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_dv_dataset"
                    style="@style/LabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataset"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_dv_dataset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <Button
                android:id="@+id/btn_add_dataset"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_dataset"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_dv_filter"
                    style="@style/LabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_dv_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <Button
                android:id="@+id/btn_add_filter"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_filter"/>

            <TextView
                android:id="@+id/tv_dv_chart"
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chart" />

            <Spinner
                android:id="@+id/sp_chart_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/chart_type_array">
            </Spinner>
            <TextView
                android:id="@+id/tv_dv_data"
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayed_data"/>
            <Spinner
                android:id="@+id/sp_record_column"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/record_column_array">
            </Spinner>
            <Button
                android:id="@+id/btn_view_hpi_list"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_HPI_list"/>
            <Button
                android:id="@+id/btn_view_patient_list"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_patient_list"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/graph_container_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/graph_container_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
