<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="seebee.geebeeview.layout.HPIListActivity">
    <TextView
        android:id="@+id/tv_hpi_list_title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_HPI_list"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/context_padding"
        android:weightSum="3">
        <TextView
            android:id="@+id/tv_cl_name"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_cl_date"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateCreated"
            android:textAlignment="center"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_hpi_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
